# Django-educational--project

./: .gitignore
Django/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
Django/mysite/blogapp/: models.py  urls.py  views.py
Django/mysite/blogapp/migrations/: 0001_initial.py
Django/mysite/blogapp/templates/blogapp/: base.html
Django/mysite/locale/en/LC_MESSAGES/: django.po
Django/mysite/myauth/: models.py
Django/mysite/myauth/migrations/: 0002_profile_avatar.py
Django/mysite/myauth/templates/myauth/: about-me.html  about-user.html  logout.html
Django/mysite/mysite/: settings.py
Django/mysite/shopapp/: admin.py  models.py  urls.py  views.py
Django/mysite/shopapp/management/commands/: create_order.py
Django/mysite/shopapp/migrations/: 0003_order_alter_product_description.py  0004_order_user.py  0006_alter_product_discount_alter_product_price.py
Django/mysite/shopapp/templates/shopapp/: index.html  order_details.html  order_update.html  orders_changelist.html  product_confirm_delete.html  products_details.html
Django_Cache/mysite/: db.sqlite3
Django_Cache/mysite/myauth/: urls.py  views.py
Django_Cache/mysite/myauth/migrations/: 0001_initial.py
Django_Cache/mysite/mysite/: settings.py  urls.py
Django_Cache/mysite/shopapp/: forms.py  mixins.py  serializers.py  sitemap.py  tests.py
Django_Cache/mysite/shopapp/fixtures/: auth-group-fixture.json  orders-fixture.json  products-fixture.json  users-fixture.json
Django_Cache/mysite/shopapp/migrations/: 0001_initial.py  0002_alter_product_discount_alter_product_price.py  (+3 more)
(+19 files in other folders)
