[project]
name = "django_project"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Dmitriy Tulskiy",email = "tulskiidima@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.2.4)",
    "asgiref (==3.9.0)",
    "django-filter (==25.1)",
    "djangorestframework (==3.16.1)",
    "pillow (==11.3.0)",
    "pytz (==2022.7.1)",
    "sqlparse (==0.5.3)",
    "gunicorn (==22.0.0)",
    "drf-spectacular (==0.28.0)",
    "attrs (==25.3.0)",
    "django-debug-toolbar (==6.0.0)",
    "inflection (==0.5.1)",
    "jsonschema (==4.25.1)",
    "jsonschema-specifications (==2025.4.1)",
    "pyyaml (==6.0.2)",
    "referencing (==0.36.2)",
    "rpds-py (==0.27.1)",
    "typing-extensions (==4.15.0)",
    "uritemplate (==4.2.0)",
    "psycopg[binary] (>=3.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
